# gtfixer

./: .editorconfig  README.md  pyproject.toml
gtfixer/: cli.py  fixes.py  gtfixer.py
tests/: test_cli.py  test_gtfixer.py
tests/fixtures/: correcao.txt  tr1.txt  traducao.txt
