[tool.poetry]
name = "gtfixer"
version = "0.1.0"
description = "Utilitario de linha de comando para corrigir traducoes do Google Translator"
authors = ["Valmir Franca <vfranca3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.4"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
